# real-estate-prediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  PRODUCTION_READY.md  QUICKSTART.md  README.md  config.yaml  docker-compose.yml  instructions.md  project_specs.md  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: ci.yml
api/: __init__.py  auth.py  caching.py  logging_config.py  main.py  middleware.py  monitoring.py  schemas.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  FormValidation.tsx  SearchableDropdown.tsx  Skeleton.tsx
notebooks/: eda.ipynb
src/: __init__.py  ab_testing.py  config.py  data_loader.py  evaluate.py  inference.py  mlflow_tracking.py  model_monitoring.py  model_utils.py  pipeline.py  preprocessing.py  retraining_pipeline.py  train.py  visualize.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_data_loader.py  test_evaluate.py  test_inference.py  test_model_utils.py  test_pipeline.py  test_preprocessing.py  test_train.py  test_visualize.py
